# django-url-shortener

./: .dockerignore  LICENSE  README.md  docker-compose.yml
api/: .pre-commit-config.yaml  pyproject.toml
api/config/: celery.py  settings.py  urls.py
api/shortener/: models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
api/shortener/migrations/: 0001_initial.py
conf/compose/django/: Dockerfile  requirements.txt  start
conf/compose/frontend/: Dockerfile  nginx.Dockerfile
conf/env/: django  postgres
frontend/: package.json
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: Home.vue  Login.vue
