[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
djangorestframework = "^3.11.1"
psycopg2 = "^2.8.5"
django-environ = "^0.4.5"
markdown = "^3.2.2"
django-filter = "^2.3.0"
flake8 = "^3.8.3"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
